[package]
name = "gm82_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.25"
directories = "5.0.1"
regex = "1.8.3"
reqwest = {version="0.11.18",features=["blocking"]}
scraper = "0.16.0"
tokio = "1.28.2"
trauma = "2"
sevenz-rust={version="0.2.9"}
